fix: footer in desktop not in dark mode

--- a/darkMode.css
+++ b/darkMode.css
@@ -43,7 +43,10 @@
 }
 
 .footer.fixed {
-    background-color: #1c1c1c;
+    background-color: #1c1c1c !important; 
+}
+.footer-text {
+    color: #ccc !important; 
 }
 
 .dropdown-menu {
